--- a/i386/libsaio/Makefile
+++ b/i386/libsaio/Makefile
@@ -41,10 +41,8 @@ SAIO_OBJS = table.o asm.o bios.o biosfn.o \
 	xml.o ntfs.o msdos.o md5c.o device_tree.o \
 	cpu.o platform.o dsdt_patcher.o \
 	smbios_patcher.o fake_efi.o ext2fs.o \
-	hpet.o spd.o usb.o pci_setup.o \
-	device_inject.o nvidia.o ati.o pci_root.o \
-	convert.o mem.o
-
+	hpet.o spd.o usb.o pci_setup.o convert.o mem.o pci_root.o \
+	device_inject.o nvidia.o ati.o gma.o 915resolution.o edid.o
 
 SAIO_EXTERN_OBJS = console.o
 
