--- a/package/Kexts/Disabler.kext/Contents/Info.plist
+++ b/package/Kexts/Disabler.kext/Contents/Info.plist
@@ -38,8 +38,10 @@
 	</dict>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>com.apple.kernel.iokit</key>
-		<string>1.1</string>
+		<key>com.apple.kpi.iokit</key>
+		<string>7.0</string>
+		<key>com.apple.kpi.libkern</key>
+		<string>8.0.0d0</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
